# appeals-telegram

./: dockerfile  pyproject.toml  readme.md
.github/workflows/: autotests.yml
appeals/: __main__.py
appeals/api/: common.py  conversion.py  conversion_admin.py  ping.py
appeals/config/: config.py  logging_config.py
appeals/core/: common.py  handlers.py  init.py
appeals/funcs/: conversion.py  conversion_admin.py  ping.py  start.py
appeals/tests/: common.py  run.py  test_admin_conversions.py  test_conversions.py  test_ping.py
